// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default options mergeOptions all single objects 1`] = `
Object {
  "default": 1,
  "options": 1,
  "target": 1,
}
`;

exports[`default options mergeOptions merges sub arrays 1`] = `
Object {
  "array": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`default options mergeOptions options and target as array 1`] = `
Array [
  Object {
    "default": 1,
    "options1": 1,
    "target1": 1,
  },
  Object {
    "default": 1,
    "options2": 1,
    "target2": 1,
  },
]
`;

exports[`default options mergeOptions options as array 1`] = `
Array [
  Object {
    "default": 1,
    "options1": 1,
    "target": 1,
  },
  Object {
    "default": 1,
    "options2": 1,
    "target": 1,
  },
]
`;

exports[`default options mergeOptions target as array 1`] = `
Array [
  Object {
    "default": 1,
    "options": 1,
    "target1": 1,
  },
  Object {
    "default": 1,
    "options": 1,
    "target2": 1,
  },
]
`;
